<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/text_my_profile_accueil"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailMyProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_login"
                android:drawableStart="@drawable/ic_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telephoneMyProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_phone"
                android:drawableStart="@drawable/ic_action_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:hint="@string/telephone"
                android:inputType="phone"
                android:maxLength="9" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/action_save_change"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/action_my_ads"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="manageAds"
            android:text="@string/manage_my_ads" />

        <Button
            android:id="@+id/action_change_password"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/action_deconnexion"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/action_log_out" />

        <Button
            android:id="@+id/action_desinscrire"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/unregister" />

    </LinearLayout>
</ScrollView>
