<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/linear_corner">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_register"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Name TextField -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login"
                    android:drawableStart="@drawable/ic_login"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerTelephone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_phone"
                    android:drawableStart="@drawable/ic_action_phone"
                    android:hint="@string/telephone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password TextField -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/text_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password TextField -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerPasswordConfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password_confirm"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- Error message -->

            <CheckBox
                android:id="@+id/checkBox_register_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/remember_me" />

            <TextView
                android:id="@+id/register_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/mybutton"
                android:onClick="register"
                android:text="@string/action_sign_up"
                android:textColor="#fff" />

            <!-- Link to Login Screen -->
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>